# player

./: .gitignore  CMakeLists.txt  README  README.md  icons.qrc  player.kdev4  player.pro
forms/: dialog.ui  effectstab.ui  mainwindow.ui  playertab.ui  playlisttab.ui  settingstab.ui  visualizingtab.ui
libs/: effects.h  metaTypes.h  player.h  playlistWidgetItem.h  presetDialogWindow.h  presetTypes.h  toggleButton.h
libs/qcustomplot/: qcustomplot.pro
libs/widgets/: directoryViewElementWidget.h  directoryViewList.h  directoryViewWidget.h  directoryViewWidgetTree.h
src/: connector.cpp  connector.h  connector.hpp  db.hpp  effects.h  effects.hpp  main.cpp  mainwindow.h  mainwindow.hpp  metaTypes.h  player.cpp  player.h  player.hpp  player.ui  playlistWidgetItem.hpp  presetDialogWindow.hpp  toggleButton.hpp
src/connector/: connector.cpp  connector.h
src/db/: db.h  db.hpp
src/effects/: effects.h  effects.hpp
src/parser/: parser.h  parser.hpp  parserBindings.h
src/playlist/: playlist.h  playlist.hpp
src/tabs/: playlistButtonValue.h  playlistitemdelegate.h  tab.h
src/tabs/effectsTab/: effectstab.h  effectstab.hpp  metaTypes.h  metatypes.h
src/tabs/playerTab/: playertab.h  playertab.hpp  playertabitemdelegation.h
src/tabs/playlistTab/: playlisttab.h  playlisttab.hpp
src/tabs/settingsTab/: settingstab.h  settingstab.hpp
src/tabs/visualizingTab/: visualizingtab.h  visualizingtab.hpp
src/widgets/: directoryViewElementWidget.hpp  directoryViewList.hpp  directoryViewWidget.hpp  directoryViewWidgetTree.hpp  playlistWidgetItem.hpp  presetDialogWindow.hpp  toggleButtonWidget.hpp
src/widgets/buttons/: toggleButton.h  toggleButton.hpp
src/widgets/delegation/: playlistDelegate.cpp  playlistDelegate.hpp
src/widgets/directoryListView/: directoryTree.h  directoryTree.hpp  directorylistview.h  directorylistview.hpp  directorylistviewitem.h  directorylistviewitem.hpp  directorytree.h  directorytree.hpp
src/widgets/effects/: presetDialogWindow.h  presetDialogWindow.hpp
src/widgets/player/: playlistWidgetItem.h  playlistWidgetItem.hpp  toggleButton.h  toggleButton.hpp
src/widgets/playerTabPlaylist/: playerplaylistbuttonvalue.h  playertabplaylistitem.h  playertabplaylistitem.hpp
src/widgets/playlistTabPlaylist/: playlistplaylistbuttonvalue.h  playlisttabplaylistitem.h  playlisttabplaylistitem.hpp
src/widgets/settings/: CMakeLists.txt  directoryListView.h  directoryListView.hpp  directoryListWidget.h  directoryListWidget.hpp  directoryTree.h  directoryTree.hpp
src/widgets/toggleButton/: togglebutton.h  togglebutton.hpp
